# oh-my-aws

./: .gitignore  LICENSE  README.md
.claude/: settings.local.json
.claude/agents/: aws-cdk-analyzer.md  aws-cdk-engineer.md  aws-diagnostician.md  aws-executor.md  aws-reporter.md
.kiro/agents/: aws-cdk-analyzer.md  aws-cdk-engineer.md  aws-diagnostician.json  aws-diagnostician.md  aws-executor.json  aws-executor.md  aws-grader.json  aws-grader.md  aws-incident-responder.json  aws-incident-responder.md  aws-infra-analyzer.json  aws-infra-analyzer.md  aws-reporter.json
.kiro/settings/: mcp.json
.omc/: prd.json  progress.txt  project-memory.json
.omc/plans/: aws-kiro-skill-implementation.md  open-questions.md  phase0-validation-report.md  tmt-skill-improvements.md
.omc/sessions/: 8adbba9d-e1fe-46c9-bb9a-e3ec2e2e5b08.json
.omc/state/: agent-replay-8adbba9d-e1fe-46c9-bb9a-e3ec2e2e5b08.jsonl  agent-replay-c4e3fbea-8052-4cd9-a7ed-ca2a61bf6443.jsonl  idle-notif-cooldown.json  last-tool-error.json  subagent-tracking.json
.omx/: metrics.json
.omx/logs/: hooks-2026-04-02.jsonl  turns-2026-04-02.jsonl
.omx/state/: hud-state.json  notify-hook-state.json  tmux-hook-state.json
docs/: architecture.md  harness-architecture.md
docs/plans/: 2026-04-10-ralplan-kiro-alignment-design.md
docs/research/: 01-aws-cdk-ai-agent-infra.md  02-ai-agent-cdk-skill-best-practices.md  03-aws-incident-ai-agent-case-studies.md  (+6 more)
mcp-servers/aws-ops-tools/: guardrails.py  pyproject.toml  server.py
mcp-servers/aws-ops-tools/tools/: __init__.py  act.py  observe.py  verify.py
(+111 files in other folders)
